NEW url changes made

--- a/src/constants/.env.txt
+++ b/src/constants/.env.txt
@@ -1,2 +1,2 @@
-BACKEND_URL='https://ai-solvethecase.onrender.com'
-FRONTEND_URL='https://ai-solvethecase-client.onrender.com'
+BACKEND_URL='https://ai-solvethecase-serverside.onrender.com'
+FRONTEND_URL='https://ai-solvethecase-clientside.onrender.com'
